# rust-min-wasm

./: .gitignore  README.md
00-simple-wasm/run-wasm/: Cargo.toml
00-simple-wasm/to-wasm-new/: Cargo.toml
01-cross-function-call/run-wasm/: run.sh
01-cross-function-call/run-wasm/src/: main.rs
01-cross-function-call/to-wasm-new/: to_wasm_new.wasm
01-cross-function-call/to-wasm-new/src/: lib.rs
02-safe-runtime-execution/run-wasm/: to_wasm_new.wasm
02-safe-runtime-execution/run-wasm/src/: main.rs
02-safe-runtime-execution/to-wasm-new/: build.sh  to_wasm_new.wasm
02-safe-runtime-execution/to-wasm-new/src/: lib.rs
03-shared-memory/: run.sh
03-shared-memory/import-memory/: Cargo.toml  run.sh  wasm_with_mem.wasm
03-shared-memory/import-memory/src/: main.rs
03-shared-memory/run-wasm/: Cargo.toml  run.sh  wasm_with_mem.wasm
03-shared-memory/run-wasm/src/: main.rs
03-shared-memory/to-wasm-new/: Cargo.toml  build.sh  to_wasm_new.wasm
03-shared-memory/to-wasm-new/src/: lib.rs
run-wasm/src/: main.rs
to-wasm-new/: to_wasm_new.wasm
to-wasm-new/src/: lib.rs
