[package]
name = "to-wasm-new"
version = "0.1.0"
authors = ["Evgeny Kuzyakov <h3r0k1ll3r@gmail.com>"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wee_alloc = { version = "0.4.2", default-features = true }
byteorder = { version = "1", default-features = false }

[profile.release]
panic = "abort"
lto = true
opt-level = "z"